# orbitask

./: .gitignore  README.md  update.sh
backend/: Cargo.toml  Dockerfile  TODO.md  justfile  test.sqlite
backend/data/: create_child.lua  fake_dump.sql  justfile  simple_todo.lua
backend/migrations/: 001-init.sql
backend/src/: api.rs  db_manage.rs  frontend.rs  lib.rs  main.rs  utils.rs
backend/src/api/: attributes.rs  boards.rs  codes.rs  login.rs  logs.rs  mod.rs  notes.rs  states.rs
backend/src/db_manage/: attributes.rs  boards.rs  codes.rs  errors.rs  login.rs  logs.rs  mod.rs  notes.rs  states.rs  tags.rs
backend/src/frontend/: board.rs  codes.rs  frontend_board.rs  frontend_login.rs  frontend_state.rs  frontend_tags.rs  login.rs  mod.rs  note.rs  notes.rs  render.rs  state.rs  style.rs  tags.rs  view.rs
backend/static/: style.css
backend/tests/: common.rs  integration.rs  meta.sql  test_dump.sql  test_login.rs  test_root.rs
deployment/docker/: README.md  update.sh
deployment/script/: README.md  update_default
