[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = "0.4.41"
maud = { version = "0.27.0", features = ["rocket"] }
mlua = { version = "0.10.5", features = ["lua54"] }
rand = "0.9.1"
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
rpassword = "7.4.0"
serde = "1.0.219"
serde_json = "1.0.140"
snafu = "0.8.5"
sqlx = { version = "0.7.0", features = ["macros", "runtime-tokio-rustls"] }
